# cookiecutter-pypackage

./: .pre-commit-config.yaml  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
{{cookiecutter.project_name}}/doc/source/: conf.py  index.md  index.rst  {{cookiecutter.project_name}}.md  {{cookiecutter.project_name}}.rst
{{cookiecutter.project_name}}/src/mcot/{{cookiecutter.project_name}}/: __init__.py
{{cookiecutter.project_name}}/src/tests/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py
