[bumpversion]
current_version = 0.0.0
commit = True
tag = True

[bumpversion:file:src/{{cookiecutter.project_name}}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = {{cookiecutter.project_name}}
version = attr: {{cookiecutter.project_name}}.__version__
author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.project_url}}
project_urls =
    Bug Tracker = {{cookiecutter.project_url}}/-/issues
    Documentation = {{cookiecutter.documentation_url}}
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =

[options.packages.find]
where = src
exclude =
    tests*
    *.egg-info
